--- a/Client/src/components/VideosList.module.css
+++ b/Client/src/components/VideosList.module.css
@@ -26,5 +26,14 @@
 .card {
   padding: 10px;
 }
+
+.card_title {
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
+}
   
   
